# Phonenix-AI

./: .gitignore  CONFIGURATION_SYSTEM.md  DYNAMIC_PROMPTS.md  Dockerfile  LICENSE  README.md  cerebrium.toml  example_configurations.json  pyproject.toml
examples/: __init__.py  agent_config_examples.py
samples/: structured.py
src/: agent.py
src/config/: __init__.py  config.py  logger.py
src/phonenix_agent/: agent.py  config.py
src/phonenix_agent/caller/: inbound.py  outbound.py
src/utils/: prompt.py
